objects/SuMo_Call_Rate__c.object
<CustomObject>
    <description>Snapshot of Call to Conversation percentage rate</description>
    <fields>
        <fullName>Days_Since_Created__c</fullName>
        <formula>TODAY () - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Created_Date__c</fullName>
        <label>Task Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>IF(TODAY() =  DATEVALUE(CreatedDate), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SuMo_Call_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SuMo Call Rate</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>SuMo Call Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuMo Call Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>